<resources>
    <string name="app_name">CookingUp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="all_categories_drawer">All categories</string>
    <string name="snacks_drawer">Snacks</string>
    <string name="first_meals_drawer">First meals</string>
    <string name="garnish_drawer">Garnish</string>
    <string name="sauce_drawer">Sauce</string>
    <string name="drinks_drawer">Drinks</string>
    <string name="communicate_drawer">Communicate</string>
    <string name="charity_drawer">Charity ROFL</string>

</resources>
