<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_categories"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/all_categories_drawer" />
        <item
            android:id="@+id/nav_snack"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/snacks_drawer" />
        <item
            android:id="@+id/nav_firstmeal"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/first_meals_drawer" />
        <item
            android:id="@+id/nav_garnish"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/garnish_drawer" />
        <item
            android:id="@+id/nav_sauce"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/sauce_drawer" />
        <item
            android:id="@+id/nav_drink"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/drinks_drawer" />
    </group>

    <item android:title="@string/communicate_drawer">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/charity_drawer" />

        </menu>
    </item>

</menu>
